exports[`Sync Date Assertion Error Snapshots > \"{date-like} 'to be after' {date-like}\" [date_like-to-be-after-date_like-3s3p] > should throw a consistent AssertionError [date_like-to-be-after-date_like-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{date-like} 'to be after' {date-like}\\" failed:\\n  Comparing two different types of values. Expected number but received date.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "2024-01-01T00:00:00.000Z",
  "expected": 1735689600001,
  "diff": "simple",
  "assertionId": "date_like-to-be-after-date_like-3s3p"
}
`;

exports[`Sync Date Assertion Error Snapshots > \"{date-like} 'to be before' {date-like}\" [date_like-to-be-before-date_like-3s3p] > should throw a consistent AssertionError [date_like-to-be-before-date_like-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{date-like} 'to be before' {date-like}\\" failed:\\n  Comparing two different types of values. Expected number but received date.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "2025-01-01T00:00:00.000Z",
  "expected": 1704067199999,
  "diff": "simple",
  "assertionId": "date_like-to-be-before-date_like-3s3p"
}
`;

exports[`Sync Date Assertion Error Snapshots > \"{date-like} 'to be between' {date-like} 'and' {date-like}\" [date_like-to-be-between-date_like-and-date_like-5s5p] > should throw a consistent AssertionError [date_like-to-be-between-date_like-and-date_like-5s5p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{date-like} 'to be between' {date-like} 'and' {date-like}\\" failed:\\n  Comparing two different types of values. Expected number but received date.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "2025-06-01T00:00:00.000Z",
  "expected": 1735603200000,
  "diff": "simple",
  "assertionId": "date_like-to-be-between-date_like-and-date_like-5s5p"
}
`;

exports[`Sync Date Assertion Error Snapshots > \"{date-like} 'to be the same date as' {date-like}\" [date_like-to-be-the-same-date-as-date_like-3s3p] > should throw a consistent AssertionError [date_like-to-be-the-same-date-as-date_like-3s3p] <snapshot> 1`] = `
{
  "message": "Expected dates to be the same day, but Wed Jan 01 2025 !== Thu Jan 02 2025\\n- expected  - 1\\n+ actual    + 1\\n\\n- Thu Jan 02 2025\\n+ Wed Jan 01 2025",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "Wed Jan 01 2025",
  "expected": "Thu Jan 02 2025",
  "diff": "simple",
  "assertionId": "date_like-to-be-the-same-date-as-date_like-3s3p"
}
`;

exports[`Sync Date Assertion Error Snapshots > \"{date-like} 'to equal' {date-like} 'within' {duration}\" [date_like-to-equal-date_like-within-duration-5s5p] > should throw a consistent AssertionError [date_like-to-equal-date_like-within-duration-5s5p] <snapshot> 1`] = `
{
  "message": "Expected dates to be equal within 30 seconds (30000ms), but difference was 60000ms\\n- expected  - 1\\n+ actual    + 1\\n\\n  Object {\\n-   \\"maxDifference\\": 30000,\\n+   \\"difference\\": 60000,\\n  }",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": {
    "difference": 60000
  },
  "expected": {
    "maxDifference": 30000
  },
  "diff": "simple",
  "assertionId": "date_like-to-equal-date_like-within-duration-5s5p"
}
`;

exports[`Sync Date Assertion Error Snapshots > \"{unknown} 'to be a valid date' / 'to be date-like'\" [unknown-to-be-a-valid-date-to-be-date_like-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-valid-date-to-be-date_like-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a valid date' / 'to be date-like'\\" failed:\\nInvalid input",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "not-a-date",
  "diff": "simple",
  "assertionId": "unknown-to-be-a-valid-date-to-be-date_like-2s1p"
}
`;

exports[`Sync Date Assertion Error Snapshots > \"{unknown} 'to be a weekday'\" [unknown-to-be-a-weekday-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-weekday-2s1p] <snapshot> 1`] = `
{
  "message": "Expected date to be a weekday (Monday through Friday in UTC), but it was Sunday in UTC",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "unknown-to-be-a-weekday-2s1p"
}
`;

exports[`Sync Date Assertion Error Snapshots > \"{unknown} 'to be a weekend'\" [unknown-to-be-a-weekend-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-weekend-2s1p] <snapshot> 1`] = `
{
  "message": "Expected date to be a weekend (Saturday or Sunday in UTC), but it was Tuesday in UTC",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "unknown-to-be-a-weekend-2s1p"
}
`;
